--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -24,9 +24,15 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="/js/highcharts.js"></script>
-    <script src="/js/highcharts-more.js"></script>
-    <script src="/js/modules/exporting.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/highcharts.js"
+            integrity="sha256-0+x1DGGOm17hg9UnUgTPEIbqpnUYG7+b/P/uYMO13N0="
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/js/highcharts-more.js"
+            integrity="sha256-v3bnWLik5vm/NQACjS3DMFHqLU0SP8LjU88BfV+4ROI="
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/js/modules/exporting.js"
+            integrity="sha256-6bZvN9W/+uyWX9vlaZOchNkijOkibejU2Yng54XHG4I="
+            crossorigin="anonymous"></script>
     <script src="/js/liveTime.js"></script>
     <script src="/js/liveCharts.js"></script>
 {% endblock %}
