--- a/templates/template/base.html.twig
+++ b/templates/template/base.html.twig
@@ -8,7 +8,10 @@
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/highcharts.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.14/css/highcharts.css"
+          integrity="sha256-afGRDB5kwkjMrIwb9wKAU7s2f71AhkBxC09+iKs1R74="
+          crossorigin="anonymous" />
     <link rel="icon"
           type="image/png"
           href="/favicon.png">
@@ -58,12 +61,21 @@
     <i class="fa fa-lg fa-github"></i> <a href="https://github.com/WFrancois/lapi_bet">GitHub</a><br/>
     Created By Wisak
 </footer>
-<script
-        src="/js/jquery.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/moment.js"></script>
-<script src="/js/moment-timezone.js"></script>
-<script src="/js/moment-timezone-with-data-2012-2022.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"
+        integrity="sha256-1hjUhpc44NwiNg8OwMu2QzJXhD8kcj+sJA3aCQZoUjg="
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.13/moment-timezone.min.js"
+        integrity="sha256-sSzkpCRBGdn45u312YcerqHten/KdUKSPXF9f6IK6C8="
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.13/moment-timezone-with-data-2012-2022.min.js"
+        integrity="sha256-+5qLxtbk4c2md6Wr70zMmahTHwH+CoFueQVQcRRSusg="
+        crossorigin="anonymous"></script>
 {% block javascripts %}{% endblock %}
 </body>
 </html>
