Add title for list message

--- a/templates/displayBet.html.twig
+++ b/templates/displayBet.html.twig
@@ -89,6 +89,7 @@
                                     class="js--time-winner-draw"></span></span>
                         <button type="button" class="js--next-winner btn btn-xs">Gagnant suivant</button>
                     </div>
+                    <h4>Message du gagnant :</h4>
                     <div class="js--message-of-winner" style="text-align: left;"></div>
                 </div>
             </div>
