Fix vote number; remove sms

--- a/templates/listBet.html.twig
+++ b/templates/listBet.html.twig
@@ -19,7 +19,7 @@
                     <td>{{ bet.answerType }}</td>
                     <td>{{ bet.paridurationminute }}</td>
                     <td>{{ bet.datecreated|date('d/m/Y H:i:s') }}</td>
-                    <td>{{ bet.votenumber }}</td>
+                    <td>{{ bet.voteNumber }}</td>
                 </tr>
             {% endfor %}
             </tbody>
