--- a/templates/createBet.html.twig
+++ b/templates/createBet.html.twig
@@ -17,11 +17,11 @@
             </div>
             <div class="form-group js--team-1">
                 <label for="team-1">Team 1</label>
-                <input type="text" required class="form-control" name="team-1" id="team-1" placeholder="Team 1" value="{{ data.team1 }}">
+                <input type="text" class="form-control" name="team-1" id="team-1" placeholder="Team 1" value="{{ data.team1 }}">
             </div>
             <div class="form-group js--team-2">
                 <label for="team-2">Team 2</label>
-                <input type="text" required class="form-control" name="team-2" id="team-2" placeholder="Team 2" value="{{ data.team2 }}">
+                <input type="text" class="form-control" name="team-2" id="team-2" placeholder="Team 2" value="{{ data.team2 }}">
             </div>
             <div class="form-group js--name-field">
                 <label for="name">Nom</label>
